Solve layout of main-1 with gap property

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ img {
     border: 1px solid black;
     align-items: center;
     justify-content: center;
+    gap: 100px;
     flex-grow: 1;
 }
 
